v0.8.2
------
- Marked for KSP 1.2.1
- Fixed reactor UI panel's hardcoded max safety shutdown temp (adapts to reactor)
- Capacitors now recharge in the background if ship EC is > 25%
- FissionFlowRadiator now shows current cooling in its UI
- FissionReactor auto-throttle obeys engine tweakable throttle
- New models for all nuclear fuel containers

v0.8.1
------
- Updated CRP to v6.0.1
- Reactor safety slider will now auto-adjust to the meltdown temperature of the reactor
- Improved the VAB GUI display of reactor attributes
- Improved the VAB GUI display of exhaust cooling attributes

v0.8.0
------
- KSP 1.2
- Some performance and code improvements
- Removed Radioactivity patch (should really be *in* Radioactivity)
- Updated MM
- Updated CRP
- Updated B9PartSwitch

v0.7.8
------
- Fixed some bugs with reactor repair
- Added a MM patch for Radioactivity development

v0.7.7
------
- Many improvements to the handling on the capacitor and reactor UI panels

v0.7.6
------
- USI reactor patch will now operate correctly even if the old patch is present
- Improvments to KerbalAtomics NTR patch mechanics courtesy of henrybauer
- Added more RTGs to the DecayingRTGs patch
- Reactor/Capacitor UIs won't appear if there are no reactors or capacitors on the craft

v0.7.5
------
- KSP 1.1.3
- Updated bundled CRP to 0.5.4
- Updated bundled B9PartSwitch to 1.4.3
- Added conversion patch for USI Core reactors
- Added a first pass at the Reactor UI
- Added toolbar icons to access the Capacitor UI and Reactor UI
- Added the ability to toggle the Capacitor UI with a hotkey
- Fixed a couple minor bugs in transfers for reactor fuel

v0.7.4
------
- Fixed wrong dll

v0.7.3
------
- Updated MM version
- Updated B9PartSwitch version
- Added revised model for Excalibur reactor
- Added colliders to "new" reactor models' structural areas when the structural node is enabled
- Fixed a bug where reactors would auto-shutdown on load when running